[tool.poetry]
name = "rag-llm"
version = "0.1.0"
description = ""
authors = ["Thinh Nguyen Phuoc <npthinh1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
langchain = "^0.0.336"
sentence-transformers = "^2.2.2"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
tqdm = "^4.66.1"
faiss-cpu = "^1.7.4"
llama-cpp-python = "^0.2.16"
simsimd = "^3.5.5"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
